<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiver"
        android:textSize="16sp"/>
    
    <AutoCompleteTextView android:id="@+id/et_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/please_enter_number"
        android:textSize="18sp"
        android:inputType="phone"/>

    <EditText android:id="@+id/et_msg_content"
        android:layout_width="fill_parent"
        android:layout_height="233px"
        android:layout_marginTop="20px"
        android:hint="@string/please_enter_msg"/>
    
    <Button android:id="@+id/bt_send_msg"
        android:layout_width="162px"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="70px"
        android:text="@string/send"/>
</LinearLayout>